# GraphqlApiTestBasic

./: .gitignore  README.md  pyproject.toml  pytest.ini  requeirement.txt  requirements.txt  setup.py
GraphqlApiObject/: __init__.py  graphql_api_codegen.py  graphql_operator_codegen.py
GraphqlApiObject/BaseOperator/: __init__.py  base_data.py  base_factory.py  base_operator.py  base_query_operator.py  base_test_cases_template.py
GraphqlApiObject/CasesTemplate/: normal_template.py
GraphqlApiObject/GraphqlApi/: __init__.py  graphql_api.py  special_graphql_api.py  tools.py
GraphqlApiObject/User/: base_user.py
Schema/: __init__.py  gen_platform.sh
Schema/GitHubSchema/: github_schema.json  github_schema.py  update_schema.sh
Schema/PlatformSchema/: gen_sql.sh  platform_schema.json  platform_schema.py
Schema/SeelySchema/: gen_platform.sh  platform_schema.json  seely_schema.py
Test/: test_assert.py  test_capture.py  test_class.py  test_data.py  test_gen_params.py  test_send_request.py  test_special_graphql_api.py
graphql_api_object/: __init__.py  graphql_api_codegen.py  graphql_operator_codegen.py
graphql_api_object/base_operator/: __init__.py  base_data.py  base_factory.py  base_operator.py  base_test_cases_template.py  utils.py
graphql_api_object/cases_template/: normal_template.py
graphql_api_object/graphql_api_object/: gen_params.py  tools.py
graphqlapiobject/: __init__.py  graphql_operator_codegen.py
test/: test_assert.py  test_capture.py  test_gen_params.py  test_send_request.py  test_special_graphql_api.py  web_information.yaml
(+7 files in other folders)
